force-app/main/default/objects/Contact_Information_Detail__mdt/Contact_Information_Detail__mdt.object-meta.xml
<CustomObject>
    <label>Contact Information Detail</label>
    <pluralLabel>Contact Information Detail</pluralLabel>
</CustomObject>