force-app/main/default/objects/Contact_Information_Detail__mdt/fields/Bold__c.field-meta.xml
<CustomField>
    <fullName>Bold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bold</label>
    <type>Checkbox</type>
</CustomField>