force-app/main/default/objects/Contact_Information_Detail__mdt/fields/Contact_Information_Header__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information_Header__c</fullName>
    <label>Contact Information Header</label>
    <referenceTo>Contact_Information_Header__mdt</referenceTo>
    <relationshipLabel>Contact Information Detail</relationshipLabel>
    <relationshipName>Contact_Information_Detail</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>