force-app/main/default/objects/Contact_Information_Detail__mdt/fields/CSS_Class__c.field-meta.xml
<CustomField>
    <fullName>CSS_Class__c</fullName>
    <defaultValue>&quot;slds-text-body_regular&quot;</defaultValue>
    <description>Populating from standard SF CCS text Classes from link below. Please update the picklist if necessary 

https://spring-20.lightningdesignsystem.com/utilities/text/</description>
    <label>CSS Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>slds-text-body_regular</fullName>
                <default>true</default>
                <label>slds-text-body_regular</label>
            </value>
            <value>
                <fullName>slds-text-body_small</fullName>
            </value>
            <value>
                <fullName>slds-text-heading_large</fullName>
            </value>
            <value>
                <fullName>slds-text-heading_medium</fullName>
            </value>
            <value>
                <fullName>slds-text-heading_small</fullName>
            </value>
            <value>
                <fullName>slds-text-title</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>