force-app/main/default/objects/Contact_Information_Detail__mdt/fields/Hide_Field__c.field-meta.xml
<CustomField>
    <fullName>Hide_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Field</label>
    <type>Checkbox</type>
</CustomField>