force-app/main/default/objects/Contact_Information_Detail__mdt/fields/Hide_Label__c.field-meta.xml
<CustomField>
    <fullName>Hide_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Label</label>
    <type>Checkbox</type>
</CustomField>