force-app/main/default/objects/Contact_Information_Detail__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>Contact_Information_Header__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Type__c</columns>
    <columns>Sequence__c</columns>
    <columns>Value__c</columns>
    <columns>Hide_Field__c</columns>
    <columns>Hide_Label__c</columns>
    <columns>Bold__c</columns>
    <columns>CSS_Class__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>